# V2X-ImageMutate-Test-System

./: .gitignore  README.md  db.sqlite3  devlog.md  docker-compose.yml  要求.md
client/: .env  .gitignore  Dockerfile  index.html  nginx.conf  (+4 more)
server/: Dockerfile  constraints.txt  db.sqlite3  docker-run.sh  manage.py  pyproject.toml  readme.md  requirements copy.txt  requirements.txt
server/TestSystemServer/: asgi.py  settings.py  urls.py  wsgi.py
server/aug_config/: apps.py  models.py  urls.py  views.py
server/aug_config/migrations/: 0001_initial.py
server/data_aug/: apps.py  tests.py  urls.py  views.py
server/data_aug/aug_server/: AugServer.py  DataBaseServer.py
server/data_aug/aug_strategy/: AugStrategy.py  BrightnessStrategy.py  FogStrategy.py  HighTemperatureStrategy.py  MotionBlurStrategy.py  RainStrategy.py  SaltPepperStrategy.py  ShadowStrategy.py  SnowStrategy.py  SpeckleNoiseStrategy.py  VagueStrategy.py
server/data_aug/tools/: file_tools.py
server/database_opt/: apps.py  models.py  urls.py  views.py
server/file_up_down/: apps.py  forms.py  models.py  urls.py  views.py
server/file_up_down/migrations/: 0001_initial.py
server/login/: urls.py  views.py
server/model_test/: apps.py  models.py  urls.py  views.py
server/model_test/migrations/: 0001_initial.py
server/opencood/data_utils/datasets/: __init__.py  basedataset.py
server/opencood/data_utils/datasets/camera_only/: base_camera_dataset.py  intermediate_fusion_dataset.py
server/opencood/hypes_yaml/: config.yaml  yaml_utils.py
server/opencood/logs/cobevt/: config.yaml  net_epoch91.pth
server/opencood/logs/cobevt_static/: config.yaml  net_epoch91.pth
server/opencood/tools/: inference_camera.py  infrence_utils.py  merge_dynamic_static.py
server/opencood/utils/: box_overlaps.c  box_overlaps.cp37-win_amd64.pyd
server/result_manage/: apps.py  models.py  urls.py  views.py
server/result_manage/migrations/: 0001_initial.py
server/static/aug_file/3/ThreeCarTest_2023_10_30_02_05_43_679/car_2_aug/2021_08_20_21_10_24/: data_protocol.yaml
(+28 files in other folders)
